# dissertacao-mestrado

./: README.md  gazebo_ros_template.cpp  gazebo_ros_template.h  tutorial.txt
PM/: CMakeCache.txt  many.launch  many.xml  tree_PionnerModel.txt
PM/catkin_generated/: generate_cached_setup.py  order_packages.cmake  order_packages.py  setup_cached.sh
PM/devel/: .catkin  .rosinstall  setup.sh
PM/docs/: readme.md.save  readme.txt
PM/p3dx_description/: teste_p3dx.world
PM/p3dx_led/: CMakeLists.txt  big_led.cc  big_led.h  led_coloring.h  model_coloring.h
PioneerModel/: image.sh  image.sh~
PioneerModel/p3dx_led/: CMakeLists.txt  CMakeLists.txt~  big_led.cc  big_led.h  led_coloring.cc  model_coloring.cc  (+1 more)
big_led_plugin/: BigLedPlugin.cc  BigLedPlugin.cc.bkp  BigLedPlugin.cc~  BigLedPlugin.hh  BigLedPlugin.hh.bkp  CMakeLists.txt  CMakeLists.txt.bkp  CMakeLists.txt~  big_led_plugin.world  big_led_plugin.world.bkp  big_led_plugin.world~  package.xml  setcor.cc
gazebo_light_sensor_plugin/: CMakeLists.txt~  package.xml  package.xml~
gazebo_plugin_tutorial/: hello.world
matplotlib/: angularCoefBeaconToRobot.py  angularControl.py  angularControlToBeacon.py  atrator_e_repulsor.py  fuzzy.py  fuzzySignal.py  fuzzyclass.py  fuzzyclasstest.py  linearControl.py  matplotlib_circle.py  printfuzzy.py  raioDoArcoTangente.py  robo_e_beacon_01.py  smoothStepFunction.py  vector_field_01.py  vector_field_01b.py  vector_field_01c.py  vector_field_02.py  vector_field_03.py  vector_field_04.py
velodyne_plugin/: CMakeLists.txt~  velodyne.launch  velodyne.world  velodyne_plugin.cc
(+195 files in other folders)
